--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         <img id="player_fish" src="assets/images/player_fish.png" alt="player_fish">
         <img id="smallGears" src="assets/images/smallGears.png" alt="smallGears">
         <audio id="charge" src="assets/sounds/charge.mp3"></audio>
+        <audio id="flap1" src="assets/sounds/flap1.mp3"></audio>
+        <audio id="flap2" src="assets/sounds/flap2.mp3"></audio>
+        <audio id="flap3" src="assets/sounds/flap3.mp3"></audio>
+        <audio id="flap4" src="assets/sounds/flap4.mp3"></audio>
+        <audio id="flap5" src="assets/sounds/flap5.mp3"></audio>
+        <audio id="win" src="assets/sounds/win.mp3"></audio>
+        <audio id="lose" src="assets/sounds/lose.mp3"></audio>
     </div>
 
     <script src="assets/scripts/audio.js"></script>
