--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Londrina+Outline&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <canvas id="canvas1"></canvas>
 
     <div class="controls">
-        <button id="restartButton">R</button>
-        <button id="fullScreenButton">F</button>
-        <button id="debugButton">D</button>
+        <button id="restartButton"><i class="fas fa-redo"></i></button>
+        <button id="fullScreenButton"><i class="fas fa-expand"></i></button>
+        <button id="debugButton"><i class="fas fa-bug"></i></button>
     </div>
 
     <div class="assets">
